// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--show-config > should show config 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer hello --show-config
---------- Stdout ------------
[log] {
  "cache": true,
  "footer": false,
  "summary": false,
  "parallel": false,
  "logLevel": "log",
  "cleanCache": false,
  "showConfig": true,
  "implicitDependencies": true,
  "excludedTasks": [],
  "isWorkerThread": false,
  "tasks": [
    {
      "corrected": false,
      "rawInput": "hello",
      "taskId": "root:hello"
    }
  ],
  "maxWorkers": 1,
  "list": false,
  "dryRun": false,
  "stacktrace": false,
  "listWorkspaces": false,
  "project": {
    "rootWorkspace": {
      "id": "root",
      "label": "",
      "packageJson": {
        "name": "@nadle/internal-nadle-test-fixtures-main",
        "type": "module",
        "private": true,
        "dependencies": {
          "nadle": "workspace:*"
        },
        "nadle": {
          "root": true
        }
      },
      "absolutePath": "/ROOT/test/__fixtures__/main",
      "dependencies": [],
      "relativePath": ".",
      "configFilePath": "/ROOT/test/__fixtures__/main/nadle.config.ts"
    },
    "workspaces": [],
    "packageManager": "npm",
    "currentWorkspaceId": "root"
  },
  "cacheDir": "/ROOT/test/__fixtures__/main/.nadle",
  "minWorkers": 1
}
`;

exports[`--show-config > should show config with extra options 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --no-footer hello --show-config --min-workers 2 --max-workers 3
---------- Stdout ------------
[log] {
  "cache": true,
  "footer": false,
  "summary": false,
  "parallel": false,
  "logLevel": "log",
  "cleanCache": false,
  "showConfig": true,
  "implicitDependencies": true,
  "excludedTasks": [],
  "isWorkerThread": false,
  "tasks": [
    {
      "corrected": false,
      "rawInput": "hello",
      "taskId": "root:hello"
    }
  ],
  "minWorkers": 2,
  "maxWorkers": 3,
  "list": false,
  "dryRun": false,
  "stacktrace": false,
  "listWorkspaces": false,
  "project": {
    "rootWorkspace": {
      "id": "root",
      "label": "",
      "packageJson": {
        "name": "@nadle/internal-nadle-test-fixtures-main",
        "type": "module",
        "private": true,
        "dependencies": {
          "nadle": "workspace:*"
        },
        "nadle": {
          "root": true
        }
      },
      "absolutePath": "/ROOT/test/__fixtures__/main",
      "dependencies": [],
      "relativePath": ".",
      "configFilePath": "/ROOT/test/__fixtures__/main/nadle.config.ts"
    },
    "workspaces": [],
    "packageManager": "npm",
    "currentWorkspaceId": "root"
  },
  "cacheDir": "/ROOT/test/__fixtures__/main/.nadle"
}
`;
